--- a/Infraero.Relprev.WebUi/Views/Empresa/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Empresa/Create.cshtml
@@ -23,13 +23,13 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Empresa órgão público</label>
                         <div class="col-sm-9">
-                            <input type="text" name="fullname" class="form-control" placeholder="eg.: Empresa órgão público" />
+                            <input type="text" name="Empresa" class="form-control" placeholder="eg.: Empresa órgão público" />
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">CPNJ </label>
                         <div class="col-sm-9">
-                            <input type="text" name="fullname" class="form-control" data-input-mask="99.999.999/9999-99" placeholder="eg.: CNPJ da empresa / órgão público" maxlength="18" />
+                            <input type="text" name="CNPJ" class="form-control" data-input-mask="99.999.999/9999-99" placeholder="eg.: CNPJ da empresa / órgão público" maxlength="18" />
                         </div>
                     </div>
                     <div class="form-group row">
@@ -39,7 +39,7 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-phone"></i>
                                 </span>
-                                <input id="phone" data-plugin-masked-input="" data-input-mask="(99) 999-9999" placeholder="eg.: Telefone da empresa" class="form-control">
+                                <input name="Telefone" id="phone" data-plugin-masked-input="" data-input-mask="(99) 999-9999" placeholder="eg.: Telefone da empresa" class="form-control">
                             </div>
                         </div>
                     </div>
