--- a/Infraero.Relprev.WebUi/Views/Home/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Home/Index.cshtml
@@ -14,11 +14,12 @@
                 <h2 class="title text-uppercase font-weight-bold m-0"><i class="fa fa-user mr-1"></i> Acesso ao Sistema</h2>
             </div>
             <div class="card-body">
-                <form action="@Url.Action("Index", "Dashboard")" method="post">
+            @using (@Html.BeginForm("Login", "Home", FormMethod.Post))
+            {
                     <div class="form-group mb-3">
                         <label>Usuário</label>
                         <div class="input-group input-group-icon">
-                            <input name="username" type="text" class="form-control form-control-lg" />
+                            <input name="usuario" type="text" class="form-control form-control-lg" />
                             <span class="input-group-addon">
                                 <span class="icon icon-lg">
                                     <i class="fa fa-user"></i>
@@ -33,7 +34,7 @@
                             <a href="@Url.Action("RecuperarSenha", "Home")" class="float-right">Recuperar Senha</a>
                         </div>
                         <div class="input-group input-group-icon">
-                            <input name="pwd" type="password" class="form-control form-control-lg" />
+                            <input name="password" type="password" class="form-control form-control-lg" />
                             <span class="input-group-addon">
                                 <span class="icon icon-lg">
                                     <i class="fa fa-lock"></i>
@@ -44,23 +45,18 @@
 
                     <div class="row">
                         <div class="col-sm-8">
-                            @*<div class="checkbox-custom checkbox-default">
-                    <input id="RememberMe" name="rememberme" type="checkbox" />
-                    <label for="RememberMe">Remember Me</label>
-                </div>*@
                         </div>
                         <div class="col-sm-4 text-right">
                             <button type="submit" class="btn btn-primary mt-2">Entrar</button>
                         </div>
                     </div>
 
-        
 
-                    @*<p class="text-center">Don't have an account yet? <a href="pages-signup.html">Sign Up!</a></p>*@
 
-                </form>
 
-            </div>
+            }
+
+                </div>
         </div>
 
         <p class="text-center text-muted mt-3 mb-3">&copy; Copyright 2019. Todos os direitos reservados.</p>
