--- a/Infraero.Relprev.WebUi/Views/Empresa/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Empresa/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using Infraero.Relprev.Application.Empresas.Queries.GetEmpresas
 @{
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -23,13 +23,13 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Empresa órgão público</label>
                         <div class="col-sm-9">
-                            <input type="text" name="fullname" class="form-control" placeholder="eg.: Nome da empresa órgão público para atendimento de relatos" />
+                            <input type="text" name="empresa" class="form-control" value="@Model.NomRazaoSocial" placeholder="eg.: Nome da empresa órgão público para atendimento de relatos" />
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">CPNJ </label>
                         <div class="col-sm-9">
-                            <input type="text" name="fullname" class="form-control" data-input-mask="99.999.999/9999-99" placeholder="eg.: CNPJ da empresa / órgão público" maxlength="18" />
+                            <input type="text" name="cnpj" class="form-control" data-input-mask="99.999.999/9999-99" value="@Model.NumCnpj" placeholder="eg.: CNPJ da empresa / órgão público" maxlength="18"/>
                         </div>
                     </div>
                     <div class="form-group row">
@@ -39,7 +39,7 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-phone"></i>
                                 </span>
-                                <input id="phone" data-plugin-masked-input="" data-input-mask="(99) 999-9999" placeholder="eg.: Número de telefone para atendimento" class="form-control">
+                                <input name="telefone" id="telefone" data-plugin-masked-input="" data-input-mask="(99) 999-9999" value="@Model.NumTelefone" placeholder="eg.: Número de telefone para atendimento" class="form-control">
                             </div>
                         </div>
                     </div>
