--- a/Infraero.Relprev.WebUi/Views/Assunto/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Assunto/Create.cshtml
@@ -23,7 +23,7 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Assunto <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição do  assunto relacionado as  ocorrências " required maxlength="50"></textarea>
+                            <textarea type="text" rows="3" name="DscAssunto" class="form-control" placeholder="eg.: Descrição do  assunto relacionado as  ocorrências " required maxlength="50"></textarea>
                         </div>
                     </div>
                 </div>
