--- a/Infraero.Relprev.WebUi/Views/Assunto/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Assunto/Edit.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Create", "Assunto", FormMethod.Post))
+        @using (@Html.BeginForm("Edit", "Assunto", FormMethod.Post))
         {
             <section class="card">
                 <header class="card-header">
@@ -24,7 +24,7 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Assunto </label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição do  assunto relacionado as  ocorrências "  maxlength="50"></textarea>
+                            <textarea type="text" rows="3" name="DscAssunto" class="form-control" placeholder="eg.: Descrição do  assunto relacionado as  ocorrências "  maxlength="50">@Model.DscAssunto</textarea>
                         </div>
                     </div>
                 </div>
