--- a/Infraero.Relprev.WebUi/Views/SubAssunto/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/SubAssunto/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Infraero.Relprev.CrossCutting.Models.SubAssuntoModel
 @{
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Create", "Assunto", FormMethod.Post))
+        @using (@Html.BeginForm("Edit", "SubAssunto", FormMethod.Post))
         {
             <section class="card">
                 <header class="card-header">
@@ -23,16 +23,14 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Assunto <span class="required">*</span></label>
                         <div class="col-lg-9">
-                            <select data-plugin-selectTwo class="form-control populate">
-                                <option value="AK">Alaska</option>
-                                <option value="HI">Hawaii</option>
-                            </select>
+                            @Html.DropDownList("CodAssunto", new SelectList(Model.ListAssunto, "Value", "Text", Model.SubAssunto.CodAssunto), "SELECIONAR", new { @class = "form-control populate", name = "ddlAssunto", style = "100%" })
+
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Sub Assunto <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição do  sub assunto relacionado as  ocorrências  " required maxlength="50"></textarea>
+                            <textarea type="text" rows="3" name="DscSubAssunto" class="form-control" placeholder="eg.: Descrição do  sub assunto relacionado as  ocorrências  " required maxlength="50">@Model.SubAssunto.DscSubAssunto</textarea>
                         </div>
                     </div>
                 </div>
@@ -59,15 +57,15 @@
 
     <script>
         // Select2
-        (function($) {
+        (function ($) {
 
             'use strict';
 
-            if ( $.isFunction($.fn[ 'select2' ]) ) {
+            if ($.isFunction($.fn['select2'])) {
 
-                $(function() {
-                    $('[data-plugin-selectTwo]').each(function() {
-                        var $this = $( this ),
+                $(function () {
+                    $('[data-plugin-selectTwo]').each(function () {
+                        var $this = $(this),
                             opts = {};
 
                         var pluginOptions = $this.data('plugin-options');
