--- a/Infraero.Relprev.WebUi/Views/UnidadeInfraestrutura/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/UnidadeInfraestrutura/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Create", "UnidadeInfraestrutura", FormMethod.Post))
+        @using (@Html.BeginForm("Edit", "UnidadeInfraestrutura", FormMethod.Post))
         {
             <section class="card">
                 <header class="card-header">
@@ -21,38 +21,26 @@
                 <div class="card-body">
                     <div class="form-group row">
                         <label class="col-lg-3 control-label text-lg-right pt-2">Código da unidade <span class="required">*</span></label>
-                        <div class="col-lg-6">
-                            <div data-plugin-spinner>
-                                <div class="input-group form-control-small">
-                                    <input type="text" class="spinner-input form-control" required>
-                                    <div class="spinner-buttons input-group-btn btn-group-vertical">
-                                        <button type="button" class="btn spinner-up btn-xs btn-default">
-                                            <i class="fa fa-angle-up"></i>
-                                        </button>
-                                        <button type="button" class="btn spinner-down btn-xs btn-default">
-                                            <i class="fa fa-angle-down"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="col-sm-9">
+                            <input type="text" rows="3" name="CodUnidade" value="@Model.CodUnidade" class="form-control" placeholder="eg.: Código da unidade  " required maxlength="4">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Sigla <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição da sigla  " required maxlength="4">
+                            <input type="text" rows="3" name="Sigla" value="@Model.Sigla"  class="form-control" placeholder="eg.: Descrição da sigla  " required maxlength="4">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Descrição Unidade Infraestrutura<span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição da Unidade de Infraestrutura  " required maxlength="50"></textarea>
+                            <textarea type="text" rows="3" name="Descricao" class="form-control" placeholder="eg.: Descrição da Unidade de Infraestrutura  " required maxlength="50">@Model.Descricao</textarea>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Endereço <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição do endereço  " required maxlength="4">
+                            <input type="text" rows="3" name="Endereco"value="@Model.Endereco" class="form-control" placeholder="eg.: Descrição do endereço  " required maxlength="4">
                         </div>
                     </div>
                     <div class="form-group row">
@@ -62,7 +50,7 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </span>
-                                <input id="date" data-plugin-masked-input data-input-mask="99/99/9999" placeholder="__/__/____" class="form-control">
+                                <input id="DtIniVigencia"name="DtIniVigencia"value="@Model.DtIniVigencia.ToString("dd/MM/yyyy")" data-plugin-masked-input data-input-mask="99/99/9999" placeholder="__/__/____" class="form-control">
                             </div>
                         </div>
 
@@ -72,7 +60,7 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </span>
-                                <input id="date" data-plugin-masked-input data-input-mask="99/99/9999" placeholder="__/__/____" class="form-control">
+                                <input id="DtFimVigencia"name="DtFimVigencia" value="@Model.DtFimVigencia.ToString("dd/MM/yyyy")"  data-plugin-masked-input data-input-mask="99/99/9999" placeholder="__/__/____" class="form-control">
                             </div>
                         </div>
                     </div>
