--- a/Infraero.Relprev.WebUi/Views/Local/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Local/Create.cshtml
@@ -23,7 +23,7 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Nome da unidade de infraestrutura </label>
                         <div class="col-lg-9">
-                            <select data-plugin-selectTwo class="form-control populate">
+                            <select data-plugin-selectTwo name="Codigo" class="form-control populate">
                                 <option value="AK">Alaska</option>
                                 <option value="HI">Hawaii</option>
                             </select>
@@ -32,7 +32,7 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Local de Ocorrência <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição do  sub assunto relacionado as  ocorrências  " required maxlength="50"></textarea>
+                            <textarea type="text" rows="3" name="Descricao" class="form-control" placeholder="eg.: Descrição do  sub assunto relacionado as  ocorrências  " required maxlength="50"></textarea>
                         </div>
                     </div>
                 </div>
