--- a/Infraero.Relprev.WebUi/Views/Local/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Local/Index.cshtml
@@ -38,11 +38,11 @@
                             @foreach (var item in Model.aaData)
                             {
                                 <tr>
-                                    <td>@Html.DisplayFor(modelItem => item.DscLocal)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.DscUnidade)</td>
                                     <td>@Html.DisplayFor(modelItem => item.DscLocal)</td>
                                     <td class="actions">
                                         <a data-toggle="tooltip" data-placement="top" title="Editar" asp-action="Edit" asp-controller="Local" asp-route-id="@item.CodLocal" class="on-default edit-row" style='color: #eea236'><i class="fa fa-pencil"></i></a>
-                                        <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a>
+                                        <a data-toggle="tooltip" data-placement="top" title="Excluir"asp-action="Delete" asp-controller="Local" asp-route-id="@item.CodLocal"  class="on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a>
                                     </td>
                                 </tr>
                             }
