--- a/Infraero.Relprev.WebUi/Views/SubLocal/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/SubLocal/Create.cshtml
@@ -24,25 +24,19 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Unidade de infraestrutura </label>
                         <div class="col-lg-9">
-                            <select data-plugin-selectTwo class="form-control populate">
-                                <option value="AK">Alaska</option>
-                                <option value="HI">Hawaii</option>
-                            </select>
+                            @Html.DropDownList("CodUnidadeInfraestrutura", @Model.ListUnidadeInfraestrutura, "SELECIONAR", new { @class = "form-control populate", name = "ddlUnidadeInfraestrutura", style = "100%" })
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Local de Ocorrência </label>
                         <div class="col-lg-9">
-                            <select data-plugin-selectTwo class="form-control populate">
-                                <option value="AK">Alaska</option>
-                                <option value="HI">Hawaii</option>
-                            </select>
+                            @Html.DropDownList("CodLocal", @Model.ListLocal, "SELECIONAR", new { @class = "form-control populate", name = "ddlLocal", style = "100%" })
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-3 control-label text-sm-right pt-2">sub local da ocorrência <span class="required">*</span></label>
+                        <label class="col-sm-3 control-label text-sm-right pt-2">Sub local da ocorrência <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição do sub local de ocorrência  " required maxlength="50"></textarea>
+                            <textarea type="text" rows="3" name="DscSubLocal" class="form-control" placeholder="eg.: Descrição do sub local de ocorrência  " required maxlength="50"></textarea>
                         </div>
                     </div>
                 </div>
