--- a/Infraero.Relprev.WebUi/Views/SubLocal/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/SubLocal/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Edit", "SubLocal", FormMethod.Post))
+        @using (@Html.BeginForm("Edit", "SubLocal", FormMethod.Post, new { id = "form" }))
         {
             <section class="card">
                 <header class="card-header">
@@ -21,22 +21,31 @@
                 </header>
                 <div class="card-body">
                     <div class="form-group row">
-                        <label class="col-sm-3 control-label text-sm-right pt-2">Unidade de infraestrutura </label>
+                        <label class="col-sm-3 control-label text-sm-right pt-2">Unidade de infraestrutura <span class="required">*</span> </label>
                         <div class="col-lg-9">
-                            @Html.DropDownList("CodUnidadeInfraestrutura", new SelectList(Model.ListUnidadeInfraestrutura, "Value", "Text", Model.SubLocal.Local.UnidadeInfraestrutura.CodUnidadeInfraestrutura), "SELECIONAR", new { @class = "form-control populate", name = "ddlUnidadeInfraestrutura", style = "100%" })
+                            <select class="form-control populate select2" name="ddlUnidadeInfraestrutura" id="ddlUnidadeInfraestrutura"
+                                    title="Por favor selecione uma unidade de infraestrutura." required
+                                    asp-for="CodUnidadeInfraestrutura"
+                                    asp-items="Model.ListUnidadeInfraestrutura">
+                                <option value="">Selecionar Unidade de infraestrutura</option>
+                            </select>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-3 control-label text-sm-right pt-2">Local de Ocorrência </label>
+                        <label class="col-sm-3 control-label text-sm-right pt-2">Local de Ocorrência <span class="required">*</span> </label>
                         <div class="col-lg-9">
-                            @Html.DropDownList("CodLocal", new SelectList(Model.ListLocal, "Value", "Text", Model.SubLocal.CodLocal), "SELECIONAR", new { @class = "form-control populate", name = "ddlLocal", style = "100%" })
-
+                            <select class="form-control populate select2" name="ddlLocal" id="ddlLocal"
+                                    title="Por favor selecione um Local de Ocorrência." required
+                                    asp-for="CodLocal" asp-items="Model.ListLocal">
+                                <option value="">Selecionar Local de Ocorrência</option>
+                            </select>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">sub local da ocorrência <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição do sub local de ocorrência  " required maxlength="50"></textarea>
+                            <textarea type="text" rows="3" name="DscSubLocal" class="form-control" 
+                                      placeholder="eg.: Descrição do sub local de ocorrência  " required maxlength="50">@Model.SubLocal.DscSubLocal</textarea>
                         </div>
                     </div>
                 </div>
@@ -59,32 +68,79 @@
     <link rel="stylesheet" href="~/vendor/select2-bootstrap-theme/select2-bootstrap.min.css" />
 }
 @section Scripts {
+    <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
     <script src="~/vendor/select2/js/select2.js"></script>
 
     <script>
         // Select2
-        (function ($) {
+            (function ($) {
 
-            'use strict';
+                'use strict';
 
-            if ($.isFunction($.fn['select2'])) {
+                var $select = $(".select2").select2({
+                    allowClear: true
+                });
 
-                $(function () {
-                    $('[data-plugin-selectTwo]').each(function () {
-                        var $this = $(this),
-                            opts = {};
+                $(".select2").each(function () {
+                    var $this = $(this),
+                        opts = {};
 
-                        var pluginOptions = $this.data('plugin-options');
-                        if (pluginOptions)
-                            opts = pluginOptions;
+                    var pluginOptions = $this.data('plugin-options');
+                    if (pluginOptions)
+                        opts = pluginOptions;
 
-                        $this.themePluginSelect2(opts);
+                    $this.themePluginSelect2(opts);
+                });
+
+            /*
+             * When you change the value the select via select2, it triggers
+             * a 'change' event, but the jquery validation plugin
+             * only re-validates on 'blur'*/
+
+            $select.on('change', function() {
+                $(this).trigger('blur');
+            });
+
+            $('#form').validate({
+                ignore: 'input[type=hidden], .select2-input, .select2-focusser'
+            });
+
+            $select.rules('add', 'required');
+
+                $("#ddlUnidadeInfraestrutura").change(function () {
+
+                    var url = '@Url.Content("~/")' + "SubLocal/GetListLocalById";
+
+                    var ddlSource = "#ddlUnidadeInfraestrutura";
+
+                    $.getJSON(url,
+                        { id: $(ddlSource).val() },
+                        function(data) {
+                            var items = '';
+                            $("#ddlLocal").empty;
+                            $.each(data,
+                                function(i, row) {
+                                    items += "<option value='" + row.value + "'>" + row.text + "</option>";
+                                });
+                            $("#ddlLocal").html(items);
+                        });
+                });
+
+                // checkbox, radio and selects
+                $("#chk-radios-form, #form").each(function() {
+                    $(this).validate({
+                        highlight: function(element) {
+                            $(element).closest('.form-group').removeClass('has-success').addClass('has-error');
+                        },
+                        success: function(element) {
+                            $(element).closest('.form-group').removeClass('has-error');
+                        }
                     });
                 });
 
-            }
+                $("#ddlLocal").select2("val", "18");
 
-        }).apply(this, [jQuery]);
+            }).apply(this, [jQuery]);
 
     </script>
 }
