--- a/Infraero.Relprev.WebUi/Views/SubLocal/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/SubLocal/Index.cshtml
@@ -42,7 +42,7 @@
                                     <td>@Html.DisplayFor(modelItem => item.DscSubLocal)</td>
                                     <td class="actions">
                                         <a data-toggle="tooltip" data-placement="top" title="Editar" asp-action="Edit" asp-controller="SubLocal" asp-route-id="@item.CodSubLocal" class="on-default edit-row" style='color: #eea236'><i class="fa fa-pencil"></i></a>
-                                        <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a>
+                                        <a data-toggle="tooltip" data-placement="top" title="Excluir" asp-action="Delete" asp-controller="SubLocal" asp-route-id="@item.CodSubLocal"   class="on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a>
                                     </td>
                                 </tr>
                             }
