Ajuste criação Responsavel Tecnico

--- a/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Index.cshtml
@@ -40,7 +40,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @*@foreach (var item in Model.aaData)
+                            @foreach (var item in Model.aaData)
                             {
                                 <tr>
                                     <td>@Html.DisplayFor(modelItem => item.NomResponsavelTecnico)</td>
@@ -53,8 +53,7 @@
                                         <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a>
                                     </td>
                                 </tr>
-                            }*@
-
+                            }
                         </tbody>
                     </table>
                 </div>
