--- a/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Create.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Infraero.Relprev.CrossCutting.Models.ResponsavelTecnicoModel
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -49,7 +49,7 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-phone"></i>
                                 </span>
-                                <input type="text" id="telefone" placeholder="eg.: Número do documento de correspondência" class="form-control" required>
+                                <input type="text" id="telefone" name="telefone" placeholder="eg.: Número do documento de correspondência" class="form-control" required>
                             </div>
                         </div>
                     </div>
@@ -64,9 +64,10 @@
                         <label class="col-lg-3 control-label text-sm-right pt-2">Unidade de Infraestritura<span class="required">*</span></label>
 
                         <div class="col-lg-9">
-                            <select data-plugin-selectTwo class="form-control populate">
-                                <option value="AK">Alaska</option>
-                                <option value="HI">Hawaii</option>
+                            <select class="form-control populate select2" name="ddlUnidadeInfraestrutura" id="ddlUnidadeInfraestrutura"
+                                    title="Por favor selecione uma unidade de infraestrutura." required
+                                    asp-for="CodUnidadeInfraestrutura" asp-items="Model.ListUnidadeInfraestrutura">
+                                <option value="">Selecionar Unidade de infraestrutura</option>
                             </select>
                         </div>
                     </div>
@@ -104,15 +105,15 @@
 
     <script>
         // Select2
-        (function($) {
+        (function ($) {
 
             'use strict';
 
-            if ( $.isFunction($.fn[ 'select2' ]) ) {
+            if ($.isFunction($.fn['select2'])) {
 
-                $(function() {
-                    $('[data-plugin-selectTwo]').each(function() {
-                        var $this = $( this ),
+                $(function () {
+                    $('[data-plugin-selectTwo]').each(function () {
+                        var $this = $(this),
                             opts = {};
 
                         var pluginOptions = $this.data('plugin-options');
